# LaEpica

algoaa/: a.cpp  a.out
arqui/: A+B.asm  String2int.asm  a  lecturaArregloNumero.asm  template.asm
arqui/Codigos Varios/: CrisGold.txt
arqui/Cosas Basicas/: leerNumero.asm
arqui/cses/: A+B.asm  A_Weird_Algorithm.asm  B_Missing_Number.asm  C_Sorting.asm  a  in
arqui/lab5_24_1/: a  p1.asm  p1_v2.asm  poke  poke.c  statPokeASM.asm
pooTeoria/: CMakeLists.txt
progra2/algo/: CMakeLists.txt  funcionesArbolesBinarios.h  main.cpp
progra2/lab07/: Biblioteca.cpp  Biblioteca.hpp  CMakeLists.txt  Enciclopedia.cpp  Enciclopedia.hpp  Espacio.cpp  Espacio.hpp  Estante.cpp  Estante.hpp  EstanteHorizontal.cpp  EstanteHorizontal.hpp  EstanteVertical.cpp  EstanteVertical.hpp  Libro.cpp  Libro.hpp  Novela.cpp  Novela.hpp  main.cpp  utils.hpp
progra2/pooTeoria/: CLrect.cpp  CLrect.hpp  CMakeLists.txt  ClaseRectangulo.cpp  ClaseRectangulo.hpp  main.cpp
progra2/prac1/: Biblioteca.cpp  Biblioteca.hpp  CMakeLists.txt  Espacio.cpp  Espacio.hpp  Estante.cpp  Estante.hpp  Libro.cpp  Libro.hpp  main.cpp  reporte.txt  utils.hpp
progra2/prac2/: Biblioteca.cpp  Biblioteca.hpp  CMakeLists.txt  Enciclopedia.cpp  Enciclopedia.hpp  Estante.cpp  Estante.hpp  Libro.cpp  Libro.hpp  Lista.cpp  Lista.hpp  Nodo.cpp  Nodo.hpp  Novela.cpp  Novela.hpp  Reporte.txt  Revista.cpp  Revista.hpp  main.cpp  utils.hpp
progra2/prac3/: CMakeLists.txt
progra2/practicandoLab/: CMakeLists.txt  Lista.cpp  Lista.hpp  Nodo.cpp  Nodo.hpp  Pedido.cpp  Pedido.hpp  PedidoEspecial.cpp  PedidoEspecial.hpp  PedidoEventual.cpp  PedidoEventual.hpp  PedidoUsual.cpp  PedidoUsual.hpp  Promociones.cpp  Promociones.hpp  main.cpp  utils.hpp
progra2/problemas/Lab6_2023_2_v1/: Almacen.cpp  Almacen.hpp  CMakeLists.txt  Cliente.cpp  Cliente.hpp  Pedido.cpp  Pedido.hpp  Producto.cpp  Producto.hpp  ProductoEntregado.cpp  ProductoEntregado.hpp  main.cpp
sisop/sem2/: a.c  a.out  aprocesos.txt  arbol.c  arbol_v1.c  arbol_v2.c  codigos.sh  factor.sh  (+5 more)
(+124 files in other folders)
